<resources>
    <string name="app_name">APPPLAYLISTMAKER</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="tosupp">Написать в поддержку</string>
    <string name="agr">Пользовательское соглашение</string>
    <string name="link_to_the_course">https://practicum.yandex.ru/android-developer/</string>
    <string name="course_name">Android developer курс</string>
    <string name="my_email">"vikadraenkova@yandex.by"</string>
    <string name="list_to_devs_pm">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="list_to_devs">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="no_music">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="clean_history">Очистить историю</string>
    <string name="you_search_it_later">Вы искали</string>
    <string name="play_music">Play Music</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="country">Страна</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="start_timer">00:00</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="mediateka_is_empty">Ваша медиатека пуста</string>
    <string name="no_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="name_required">Название*</string>
    <string name="discription">Описание</string>
    <string name="create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="delete_track">Удалить трек</string>
    <string name="delete_track_agreement">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="discard">Отмена</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_agreement">Хотите удалить плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="tracks_count_template">%1$d треков</string>
    <string name="playlist_summary_template">%1$d минут • %2$d треков</string>
    <string name="share_playlist_">Поделиться</string>
    <string name="redact_info">Редактировать информацию</string>

</resources>