<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3772E7"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingBottom="28dp"
        android:textAllCaps="false">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="12dp"
                android:text="@string/playlist_maker"
                android:textColor="@color/white"
                android:textSize="26sp" />
        </FrameLayout>

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:cornerRadius="16dp"

            app:icon="@drawable/lupa"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/button_media"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:cornerRadius="16dp"

            app:icon="@drawable/mediateka"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black"

            />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/shesternya"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black"

            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>