<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/day_white_night_black"
    android:orientation="vertical"
    tools:context=".ui.new_playlist.fragment.NewPlaylistFragment">


    <Toolbar
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:contentInsetStartWithNavigation="0dp"
        android:navigationIcon="@drawable/back_icon"
        android:title="@string/new_playlist"
        android:titleTextAppearance="@style/ToolbarTitleText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="24dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/day_white_night_black">

                <com.practicum.appplaylistmaker.SquareImageView
                    android:id="@+id/image_for_playlist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_rectangle"
                    android:scaleType="centerInside"
                    android:src="@drawable/placeholder_add_image" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutTitle"
                style="@style/EdittextStyleWithDiscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/name_required">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPlaylistTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:imeOptions="actionDone"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDiscription"
                style="@style/EdittextStyleWithDiscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/discription">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPlaylistDiscription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:imeOptions="actionDone"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_create_playlist"
                style="@style/ButtonNewPlaylist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="34dp"
                android:enabled="false"
                android:text="@string/create" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>