<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CoordinatorLayoutWithTrack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.audioplayer.AudioplayerActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/audioplayer_nav_host_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:navGraph="@navigation/main_navigation_graph" />

    <ScrollView
        android:id = "@+id/scrollview_with_track"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp">

            <Toolbar
                android:id="@+id/back_to_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentInsetStartWithNavigation="0dp"
                android:navigationIcon="@drawable/back_icon"
                android:titleTextAppearance="@style/ToolbarTitleText"
                app:theme="@style/ToolbarColoredBackArrow"
                tools:ignore="MissingConstraints" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_left_glideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_right_glideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />


            <ImageView
                android:id="@+id/music_icon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/placeholder"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/vertical_right_glideline"
                app:layout_constraintStart_toEndOf="@+id/vertical_left_glideline"
                app:layout_constraintTop_toBottomOf="@+id/back_to_list" />

            <TextView
                android:id="@+id/music_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:fontFamily="@font/ys_text_medium"
                android:text="aaaaaaaaaaaaaaaaaaaaaaaaaa"
                android:textColor="@color/day_black_night_white"
                android:textSize="22dp"
                app:layout_constraintStart_toEndOf="@+id/vertical_left_glideline"
                app:layout_constraintTop_toBottomOf="@+id/music_icon" />

            <TextView
                android:id="@+id/music_author"
                style="@style/TextStyleBicolorMedium14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/ys_text_medium"
                android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/vertical_left_glideline"
                app:layout_constraintTop_toBottomOf="@+id/music_name" />

            <ImageButton
                android:id="@+id/button_play_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_play"
                android:backgroundTint="@drawable/enabled_disabled_selector"
                android:enabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/music_author"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/button_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="54dp"
                android:background="@drawable/button_disliked"
                app:layout_constraintEnd_toEndOf="@+id/vertical_right_glideline"
                app:layout_constraintTop_toBottomOf="@+id/music_author"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/add_to_playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="54dp"
                android:background="@drawable/buttonsavetomusiclist"
                app:layout_constraintStart_toStartOf="@+id/vertical_left_glideline"
                app:layout_constraintTop_toBottomOf="@+id/music_author"
                tools:ignore="SpeakableTextPresentCheck" />


            <TextView
                android:id="@+id/time_music"
                style="@style/TextStyleBicolorMedium14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_timer"
                app:layout_constraintEnd_toStartOf="@+id/vertical_right_glideline"
                app:layout_constraintStart_toEndOf="@+id/vertical_left_glideline"
                app:layout_constraintTop_toBottomOf="@+id/button_play_stop" />

            <TextView
                android:id="@+id/music_duration"
                style="@style/TextStyleGrayRegular13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/duration"
                app:layout_constraintStart_toEndOf="@+id/vertical_left_glideline"
                app:layout_constraintTop_toBottomOf="@+id/time_music" />

            <TextView
                android:id="@+id/music_duration_value"
                style="@style/TextStyleBicolorRegular13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/duration"
                app:layout_constraintEnd_toStartOf="@+id/vertical_right_glideline"
                app:layout_constraintTop_toBottomOf="@+id/time_music" />

            <TextView
                android:id="@+id/album_name"
                style="@style/TextStyleGrayRegular13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/album"
                app:layout_constraintStart_toEndOf="@+id/vertical_left_glideline"
                app:layout_constraintTop_toBottomOf="@+id/music_duration" />

            <TextView
                android:id="@+id/album_name_value"
                style="@style/TextStyleBicolorRegular13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/album"
                app:layout_constraintEnd_toStartOf="@+id/vertical_right_glideline"
                app:layout_constraintTop_toBottomOf="@+id/music_duration" />

            <TextView
                android:id="@+id/year"
                style="@style/TextStyleGrayRegular13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/year"
                app:layout_constraintStart_toEndOf="@+id/vertical_left_glideline"
                app:layout_constraintTop_toBottomOf="@+id/album_name" />

            <TextView
                android:id="@+id/year_value"
                style="@style/TextStyleBicolorRegular13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/year"
                app:layout_constraintEnd_toStartOf="@+id/vertical_right_glideline"
                app:layout_constraintTop_toBottomOf="@+id/album_name" />

            <TextView
                android:id="@+id/genre"
                style="@style/TextStyleGrayRegular13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/genre"
                app:layout_constraintStart_toEndOf="@+id/vertical_left_glideline"
                app:layout_constraintTop_toBottomOf="@+id/year" />

            <TextView
                android:id="@+id/genre_value"
                style="@style/TextStyleBicolorRegular13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/genre"
                app:layout_constraintEnd_toStartOf="@+id/vertical_right_glideline"
                app:layout_constraintTop_toBottomOf="@+id/year" />

            <TextView
                android:id="@+id/country"
                style="@style/TextStyleGrayRegular13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="20dp"
                android:text="@string/country"
                app:layout_constraintStart_toEndOf="@+id/vertical_left_glideline"
                app:layout_constraintTop_toBottomOf="@+id/genre" />

            <TextView
                android:id="@+id/country_value"
                style="@style/TextStyleBicolorRegular13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="20dp"
                android:text="@string/country"
                app:layout_constraintEnd_toStartOf="@+id/vertical_right_glideline"
                app:layout_constraintTop_toBottomOf="@+id/genre" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="horizontal"
        app:behavior_halfExpandedRatio="0.7"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


        <include layout="@layout/layout_persistent_bottom_sheet"
            android:id="@+id/layout_persistent_bottom_sheet"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
